--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,2 +1,6 @@
 @import "./settings";
 @import "./components/navbar";
+@import "./components/header";
+@import "./components/skills";
+@import "./components/contact";
+@import "./components/about";
