--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -1,8 +1,26 @@
-header {
-    max-width: 1024px;
+nav {
+    background: $background-2;
+    position: fixed;
+    width: 100%;
+    display: flex;
+    z-index: 10;
+    .block-nav {
+        width: 50%;
+    }
     ul {
+        width: 50%;
+        max-width: 1200px;
+        height: 55px;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         flex-direction: row;
+        align-items: center;
+        text-transform: uppercase;
+    }
+    a {
+        color: white;
+    }
+    li {
+        padding: 0 30px 0 0;
     }
 }
