--- a/client/src/styles/components/_contact.scss
+++ b/client/src/styles/components/_contact.scss
@@ -1,20 +1,146 @@
 .form-container {
-    label {
-        padding: 10px 0 10px 0;
+    h3 {
+        font-family: $font-2;
+        padding: 30px 0 25px 0;
+        font-size: 30px;
     }
-    form {
+}
+
+.contain-footer {
+    display: flex;
+    .container-info {
+        width: 37%;
+        opacity: 0.85;
+        line-height: 2;
+        letter-spacing: 0.5px;
+        .contain-icon {
+            cursor: pointer;
+            flex-direction: row;
+            display: flex;
+            justify-content: space-between;
+            max-width: 100px;
+            padding-top: 15px;
+            align-items: center;
+            img {
+                width: 100%;
+                height: 22px;
+                object-fit: cover;
+                &:hover {
+                    transition: 0.5s;
+                    transform: scale(1.2);
+                }
+            } 
+        }
+    }
+}
+
+.contact-form {
+    width: 50%;
+    display: block;
+    position: relative;
+    ul li.half {
+        width: 49%;
+        clear: none;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        margin-bottom: 10px;
+        overflow: hidden;
         display: flex;
-        flex-direction: column;
     }
-    input, textarea {
-        border: 1px solid red;
-        width: 500px;
+    input[type="text"], input[type="email"] {
+        width: 100%;
+        float: left;
+        border: 0;
+        height: 50px;
+        font-size: 16px;
+        padding: 20px 0 15px 0;
+        margin: 0 20px 0 25px;
+        box-sizing: border-box;
+        max-width: 235px;
     }
-    .btn-form {
-        padding: 20px;
-        border: 1px solid red;
-        border-radius: 20px;
-        margin: 10px;
-        width: 20%;
+    textarea {
+        min-height: 150px;
+        padding: 20px 0 15px 0;
+        margin: 0 20px 0 25px;
+        width: 90%;
+        font-size: 16px;
+        box-sizing: border-box;
+        border: 0;
+        overflow: auto;
+        resize: none;
+    }
+    .submit {
+        float: right;
+        padding: 20px 0;
+        margin-right: 40px;
+    }
+    input[type="text"], input[type="email"], textarea {
+        border-bottom: 1px solid rgba($color: #ababab, $alpha: 0.5); 
+        
+        &:focus {
+            transition: 0.4s;
+            border-bottom: 1px solid rgba($color: $background-1, $alpha: 1);
+        }
+    }
+}
+
+.align-li {
+    display: flex;
+}
+
+button {
+    padding: 20px;
+    background: white;
+    color: $background-1;
+    letter-spacing: 3px;
+    font-size: 14px;
+    margin: 10px;
+    width: 100%;
+    cursor: pointer;
+    position: relative;
+    border: 1px solid $background-1;
+    overflow: hidden;
+    z-index: 1;
+    &:hover {
+        z-index: 5;
+        color: white;
+    }
+    &:after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0; bottom: 0; left: 0; right: 0;
+    transition: 0.4s;
+    background: $background-1;
+    }
+}
+.btn-form::after {
+    height: 100%;
+    width: 0;
+}
+
+.btn-form:hover::after {
+  width: 100%;
+}
+
+.animated {
+    animation-name: animated;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+
+@keyframes animated {
+    0% {
+        opacity: 0;
+        -webkit-transform: translate3d(0, 100%, 0);
+        -ms-transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: none;
+        -ms-transform: none;
+        transform: none;
     }
 }
