mise à jour générale du projet

--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -12,7 +12,9 @@ $font-2: "Russo One", sans-serif;
 
 $background-1: #1d1d1d;
 $background-2: #181818;
+$background-3: #F9FAFB;
 $color-1: #FFFFFF;
+$color-2: #5D7B6F;
 
 * {
     font-family: $font-1;
