--- a/client/src/styles/components/_about.scss
+++ b/client/src/styles/components/_about.scss
@@ -9,4 +9,27 @@
     p {
       opacity: 0.85;
     }
+    .container-cv {
+      text-align: center;
+      padding: 35px 0 0 0;
+      & button {
+        background: $color-2;
+        border-radius: 10px;
+        padding: 12px;
+        color: $color-1;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 500;
+        letter-spacing: 0.5px;
+        &:hover {
+          transition: 0.5s;
+          transform: scale(1.05);
+      }
+      }
+      .icon-download {
+        color: $color-1;
+        font-size: 28px;
+      }
+    }
 }
