--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -25,6 +25,32 @@ nav {
     }
 }
 
-.nav-active a {
-    color: red;
+.nav-active {
+  position: relative;
+  z-index: 50;
+  &::after {
+    content: "";
+    height: 4px;
+    width: 0;
+    background: red;
+    position: absolute;
+    border-radius: 10px;
+    bottom: 0px;
+    z-index: 50;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-animation: anim 0.3s ease forwards;
+    animation: anim 0.6s ease forwards;
+
+    @-webkit-keyframes anim {
+      to {
+        width: 100%;
+      }
+    }
+    @keyframes anim {
+      to {
+        width: 100%;
+      }
+    }
+  }
 }
