modification navbar responsive

--- a/client/src/styles/components/_contact.scss
+++ b/client/src/styles/components/_contact.scss
@@ -83,6 +83,9 @@
             border-bottom: 1px solid rgba($color: $background-1, $alpha: 1);
         }
     }
+    .form-message {
+        margin: 0 20px 0 25px;
+    }
 }
 
 .align-li {
