--- a/client/src/styles/components/_projects.scss
+++ b/client/src/styles/components/_projects.scss
@@ -76,6 +76,9 @@
                 margin: 10px;
                 width: 100px;
                 height: 50px;
+                & span {
+                    padding: 5px;
+                }
             }
             .icon-img {
                 img {
