--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -1,4 +1,4 @@
-nav {
+.nav-contain {
     background: $background-2;
     position: fixed;
     width: 100%;
@@ -6,8 +6,9 @@ nav {
     z-index: 10;
     .block-nav {
         width: 50%;
+
     }
-    ul {
+    .nav-items {
         width: 50%;
         max-width: 1200px;
         height: 55px;
@@ -16,41 +17,125 @@ nav {
         flex-direction: row;
         align-items: center;
         text-transform: uppercase;
+        @media screen and (max-width: 768px) {
+          position: absolute;
+          top: 20px;
+          display: flex;
+          flex-direction: column;
+          background: $background-2;
+          left: 0;
+          width: 100%;
+          height: 170px;
+          transform: translateX(-100%);
+          transition: all .45s;
+        }
+        &.open {
+          @media screen and (max-width: 768px) {
+            transform: translateX(0);
+          }
+        }
     }
     a {
-        color: white;
+        color: $color-1;
+        opacity: 0.95;
+        position: relative;
+        @media screen and (max-width: 768px) {
+          background: transparent;
+        }
+        &:hover {
+          opacity: 1;
+        }
     }
     li {
         padding: 0 30px 0 0;
     }
+    
+    .nav-toggle {
+      display: none;
+      
+      @media screen and (max-width: 768px) {
+        display: flex;
+        width: 40%;
+        height: 50px;
+        align-items: center;
+        justify-content: flex-end;
+        cursor: pointer;
+      }
+      .bar {
+        @media screen and (max-width: 768px) {
+          position: relative;
+          width: 32px;
+          height: 2px;
+          background: $color-1;
+        }
+      }
+      .bar::before, .bar::after {
+        @media screen and (max-width: 768px) {
+          content: "";
+          position: absolute;
+          background: $color-1;
+          border-radius: 2px;
+          transition: all .45s ease-in-out;
+        }
+      }
+      .bar::before {
+        @media screen and (max-width: 768px) {
+          width: 25px;
+          height: 2px;
+          transform: translateY(-8px);
+          right: 0;
+        }
+      }
+      .bar::after {
+        @media screen and (max-width: 768px) {
+          width: 32px;
+          height: 2px;
+          transform: translateY(9px);
+        }
+      }
+      &.open > .bar {
+        @media screen and (max-width: 768px) {
+          transform: translateX(-40px);
+          background: transparent;
+          &::before {
+            width: 32px;
+            transform: rotate(45deg) translate(25px, -25px);
+          }
+          &::after {
+            transform: rotate(-45deg) translate(25px, 25px);
+          }
+        }
+      }
+    }
 }
 
-.nav-active {
-  position: relative;
-  z-index: 50;
-  &::after {
-    content: "";
-    height: 4px;
+.nav-contain a::after {
+  content: "";
+    height: 2px;
     width: 0;
-    background: red;
+    background: $color-1;
     position: absolute;
     border-radius: 10px;
-    bottom: 0px;
+    bottom: -7px;
     z-index: 50;
     left: 50%;
-    transform: translateX(-50%);
-    -webkit-animation: anim 0.3s ease forwards;
-    animation: anim 0.6s ease forwards;
-
-    @-webkit-keyframes anim {
-      to {
-        width: 100%;
-      }
-    }
-    @keyframes anim {
-      to {
-        width: 100%;
-      }
-    }
-  }
 }
+
+.nav-contain a:hover::after {
+  transform: translateX(-50%);
+  -webkit-animation: anim 0.3s ease forwards;
+  animation: anim 0.6s ease forwards;
+}
+
+@-webkit-keyframes anim {
+        to {
+          width: 100%;
+        }
+      }
+      @keyframes anim {
+        to {
+          width: 100%;
+        }
+      }
+
+
