ajout media queries responsive

--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -33,9 +33,10 @@ h3, h4 {
     font-family: $font-2;
 }
 
-.home-container {
-    min-width: 840px;
-}
+// .home-container {
+//     width: 100%;
+//     margin: 0 auto;
+// }
 
 .grid {
     max-width: 1200px;
