--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -5,6 +5,9 @@ header {
     margin-bottom: auto;
     background: $background-1;
     width: 100%;
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+    }
 }
 .header__container {
     width: 50%;
@@ -14,17 +17,27 @@ header {
     margin-bottom: auto;
     display: flex;
     justify-content: center;
+    @media screen and (max-width: 768px) {
+        width: 100%;
+        height: 0;
+    }
     .text-contain {
         text-transform: uppercase;
         h1 {
             font-weight: 300;
             font-size: 36px;
             line-height: 1.5;
+            @media screen and (max-width: 425px) {
+            font-size: 32px;
+            }
         }
         h2:nth-child(1) {
             font-size: 20px;
             font-weight: lighter;
             letter-spacing: 0.5px;
+            @media screen and (max-width: 768px) {
+              display: none;
+            }
         }
         h2 {
             line-height: 1.5;
@@ -42,9 +55,23 @@ header {
     justify-content: center;
     width: 35%;
     min-width: 540px;
+    @media screen and (max-width: 992px) {
+        min-width: 400px;
+    }
+    @media screen and (max-width: 768px) {
+        min-width: 250px;
+        margin-right: auto;
+        margin-left: auto;
+    }
     img {
         height: auto;
-        width: 100%;
+        width: 430px;
+        @media screen and (max-width: 992px) {
+            width: 340px;
+        }
+        @media screen and (max-width: 425px) {
+            width: 290px;
+        }
     }
 }
 
@@ -57,5 +84,7 @@ header::after {
         bottom: -2px;
         left: 0;
         width: 100%;
-        min-width: 835px;
+        @media screen and (max-width: 992px) {
+            height: 30px;
+        }
 }
