--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -6,7 +6,13 @@
     z-index: 10;
     .block-nav {
         width: 50%;
-
+        @media screen and (max-width: 992px) {
+          width: 35%;
+        }
+        @media screen and (max-width: 768px) {
+          display: block;
+          width: 50%;
+        }
     }
     .nav-items {
         width: 50%;
@@ -17,6 +23,9 @@
         flex-direction: row;
         align-items: center;
         text-transform: uppercase;
+        @media screen and (max-width: 992px) {
+          width: 65%;
+        }
         @media screen and (max-width: 768px) {
           position: absolute;
           top: 20px;
@@ -27,7 +36,7 @@
           width: 100%;
           height: 170px;
           transform: translateX(-100%);
-          transition: all .45s;
+          transition: all .30s ease-in-out;
         }
         &.open {
           @media screen and (max-width: 768px) {
@@ -55,7 +64,7 @@
       
       @media screen and (max-width: 768px) {
         display: flex;
-        width: 40%;
+        width: 45%;
         height: 50px;
         align-items: center;
         justify-content: flex-end;
@@ -75,7 +84,7 @@
           position: absolute;
           background: $color-1;
           border-radius: 2px;
-          transition: all .45s ease-in-out;
+          transition: all 0.25s ease-in-out;
         }
       }
       .bar::before {
