--- a/client/src/styles/components/_skills.scss
+++ b/client/src/styles/components/_skills.scss
@@ -17,6 +17,9 @@
     flex-direction: row;
     padding: 10px 0 10px 0;
     max-width: 900px;
+    @media screen and (max-width: 900px) {
+        flex-wrap: wrap;
+    }
     h5 {
         padding: 10px;
         max-height: 40px;
@@ -24,7 +27,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         line-break: auto;
-        margin: 0 10px 0 0;
+        margin: 0 10px 10px 0;
         border-radius: 10px;
         line-break: normal;
         font-size: 14px;
