--- a/client/src/styles/components/_contact.scss
+++ b/client/src/styles/components/_contact.scss
@@ -30,8 +30,7 @@
             align-items: center;
             img {
                 width: 100%;
-                height: 22px;
-                object-fit: cover;
+                max-height: 22px;
                 &:hover {
                     transition: 0.5s;
                     transform: scale(1.2);
@@ -121,7 +120,7 @@
     width: 100%;
     cursor: pointer;
     position: relative;
-    border: 1px solid $background-1;
+    border: 2px solid $background-1;
     overflow: hidden;
     z-index: 1;
     &:hover {
