--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -7,6 +7,7 @@ header {
     width: 100%;
     @media screen and (max-width: 768px) {
         flex-direction: column;
+        height: 60vh;
     }
 }
 .header__container {
@@ -60,8 +61,7 @@ header {
     }
     @media screen and (max-width: 768px) {
         min-width: 250px;
-        margin-right: auto;
-        margin-left: auto;
+        margin: auto;
     }
     img {
         height: auto;
@@ -78,7 +78,7 @@ header {
 header::after {
         content: "";
         clip-path: polygon(0 100%, 100% 100%, 0 0);
-        height: 65px;
+        height: 55px;
         background: $color-1;
         position: absolute;
         bottom: -2px;
