--- a/client/src/styles/components/_projects.scss
+++ b/client/src/styles/components/_projects.scss
@@ -28,7 +28,7 @@
                 box-shadow: 1px 1px 3px rgba($background-2, 1);
             }
             .card-title {
-                h5 {
+                & h4 {
                     font-size: 18px;
                     min-height: 36px;
                     text-align: center;
@@ -43,7 +43,8 @@
                 margin: auto;
                 object-fit: cover;
                 @media screen and (max-width: 425px) {
-                    height: 100%;
+                    height: 80%;
+                    max-height: 110px;
                 }
             }
             .card-description {
@@ -72,8 +73,8 @@
                     height: 330px;
                     margin-bottom: 10px;
                 }
-                @media screen and (max-width: 400px) {
-                    height: 380px;
+                @media screen and (max-width: 425px) {
+                    height: 370px;
                 }
             }
         }
@@ -101,6 +102,8 @@
                 height: 50px;
                 & span {
                     padding: 5px;
+                    color: black;
+                    text-decoration: none;
                 }
             }
             .icon-img {
@@ -139,7 +142,7 @@
 .container-projects::before {
     content: "";
     clip-path: polygon(100% 0, 0 100%, 0 0);
-    height: 65px;
+    height: 60px;
     background: $color-1;
     position: absolute;
     width: 100%;
@@ -150,7 +153,7 @@
 .container-projects::after {
     content: "";
     clip-path: polygon(0 100%, 100% 100%, 0 0);
-    height: 65px;
+    height: 60px;
     background: $color-1;
     position: absolute;
     width: 100%;
