--- a/client/src/styles/components/_contact.scss
+++ b/client/src/styles/components/_contact.scss
@@ -29,7 +29,7 @@
             padding-top: 15px;
             align-items: center;
             img {
-                width: 100%;
+                width: 22px;
                 max-height: 22px;
                 &:hover {
                     transition: 0.5s;
