--- a/client/src/styles/components/_projects.scss
+++ b/client/src/styles/components/_projects.scss
@@ -111,6 +111,10 @@
                     width: 24px;
                     height: 24px;
                 }
+                span {
+                    color: black;
+                    text-decoration: none;
+                }
         }
         }
         ul.list-languages {
