--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -24,18 +24,32 @@ header {
     }
     .text-contain {
         text-transform: uppercase;
-        h1 {
-            font-weight: 300;
-            font-size: 36px;
-            line-height: 1.5;
-            @media screen and (max-width: 425px) {
-            font-size: 32px;
+        .contain-dynamic_text {
+            display: flex;
+            align-items: baseline;
+            .anim-text {
+                padding-left: 10px;
+            }
+            span {
+                font-size: 24px;
+                letter-spacing: 4px;
+                font-weight: 300;
             }
         }
-        h2:nth-child(1) {
-            font-size: 20px;
+        h1 {
+            font-weight: 100;
+            padding-bottom: 15px;
+            font-size: 32px;
+            line-height: 1.5;
+            letter-spacing: 2px;
+            @media screen and (max-width: 425px) {
+            font-size: 28px;
+            }
+        }
+        h3 {
             font-weight: lighter;
-            letter-spacing: 0.5px;
+            letter-spacing: 2px;
+            padding-bottom: 40px;
             @media screen and (max-width: 768px) {
               display: none;
             }
@@ -87,4 +101,63 @@ header::after {
         @media screen and (max-width: 992px) {
             height: 30px;
         }
+}
+
+@keyframes textDynamic {
+    50% {
+        opacity: 1;
+        transform: scale(1) translateY(0px) skewY(0deg) skewX(0deg) rotateZ(0deg);
+        filter: blur(0px);
+    }
+    60% {
+        opacity: 0;
+        transform: scale(2) translateY(100px) skewY(10deg) skewX(10deg) rotateZ(30deg);
+        filter: blur(10px);
+    }
+    70% {
+        opacity: 0;
+        transform: scale(2) translateY(-100px) skewY(10deg) skewX(01deg) rotateZ(30deg);
+        filter: blur(10px);
+    }
+    80% {
+        opacity: 1;
+        transform: scale(1) translateY(0px) skewY(0deg) skewX(0deg) rotateZ(0deg);
+        filter: blur(0px);
+    }
+}
+
+.anim-text {
+    display: inline-flex; 
+    flex-direction: row;
+    font-weight: bold;
+     span {
+        animation: textDynamic 6s forwards infinite cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+}
+span:nth-child(1) {
+    animation-delay: 0.1s;
+}
+span:nth-child(2) {
+    animation-delay: 0.2s;
+}
+span:nth-child(3) {
+    animation-delay: 0.3s;
+}
+span:nth-child(4) {
+    animation-delay: 0.4s;
+}
+span:nth-child(5) {
+    animation-delay: 0.5s;
+}
+span:nth-child(6) {
+    animation-delay: 0.6s;
+}
+span:nth-child(7) {
+    animation-delay: 0.7s;
+}
+span:nth-child(8) {
+    animation-delay: 0.8s;
+}
+span:nth-child(9) {
+    animation-delay: 0.9s;
 }
