--- a/client/src/styles/components/_projects.scss
+++ b/client/src/styles/components/_projects.scss
@@ -182,5 +182,7 @@
         font-size: 14px;
         border-radius: 25px;
         cursor: pointer;
+        color: black;
+        text-decoration: none;
     }
 }
