--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -14,6 +14,7 @@ $background-1: #030014;
 $background-3: #F9FAFB;
 $color-1: #FFFFFF;
 $color-2: #5D7B6F;
+$color-3: #707070;
 
 * {
     font-family: $font-1;
@@ -37,4 +38,11 @@ h3, h4 {
     width: 100%;
     margin: 0 auto;
     padding: 20px;
+    &__title {
+       text-align: center;
+       font-size: 36px !important;
+       line-height: 40px !important;
+       font-weight: 700 !important;
+       color: #2d3748;
+    }
 }
