--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,5 +1,6 @@
 .container-about {
     line-height: 1.5;
+    max-width: 900px;
     h3 {
         font-family: $font-2;
         padding: 40px 0 25px 0;
@@ -7,11 +8,37 @@
         font-weight: 700;
     }
     p {
+      font-size: 20px;
+      color: $color-3;
+    }
+    &__text {
       opacity: 0.85;
+      margin: 30px 0 30px 0;
+      display: block;
+      justify-content: center;
+      flex-direction: column;
+      text-align: left;
+      font-size: 20px;
+      & strong {
+        max-width: 400px;
+      }
+      &-color {
+        color: #5D7B6F !important;
+        margin-bottom: 10px;
+        font-size: 28px !important;
+      }
+      &-color-grey {
+        color: #2d3748 !important;
+        margin-bottom: -10px;
+        font-size: 28px !important;
+      }
     }
     .container-cv {
       text-align: center;
       padding: 35px 0 0 0;
+      display: flex;
+      justify-content: center;
+      gap: 80px;
       & button {
         color: $background-1;
         padding: 12px;
@@ -23,6 +50,8 @@
         letter-spacing: 0.5px;
         position: relative;
         border: 2px solid $background-1;
+        border-radius: 15px;
+        overflow: hidden;
         &:hover {
           z-index: 10;
           color: $color-1;
