--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -15,6 +15,19 @@ header {
         flex-direction: column;
         height: 900px;
     }
+    & .scroll-bottom {
+        & .MuiSvgIcon-root {
+            color: white;
+            transition: all 0.5s ease-in-out;
+            width: 44px;
+            height: 44px;
+            position: absolute;
+            top: calc(100% - 80px);
+            left: calc(50%);
+            animation: bounceUpDown 2s infinite ease-in-out;
+            cursor: pointer;
+        }
+    }
 }
 .header__container {
     width: 100%;    
@@ -128,6 +141,15 @@ header {
         @media screen and (max-width: 425px) {
             width: 600px;
         }
+    }
+}
+
+@keyframes bounceUpDown {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(13px);
     }
 }
 
