--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -8,6 +8,7 @@ header {
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 1000ms;
+    overflow-x: hidden !important;
     @media screen and (min-width: 2000px) {
        gap: 100px;
      }
