--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -45,6 +45,10 @@ header {
         width: 100%;
         height: 0;
     }
+    @media screen and (max-width: 475px) {
+       display: unset;
+       padding-left: 10px;
+    }
     .text-contain {
         // text-transform: uppercase;
         white-space: nowrap;
@@ -137,10 +141,10 @@ header {
         height: auto;
         width: 1000px;
         @media screen and (max-width: 1000px) {
-            width: 800px;
+            width: 600px;
         }
         @media screen and (max-width: 425px) {
-            width: 600px;
+            min-width: 500px;
         }
     }
 }
