--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -5,6 +5,7 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+        padding: unset;
         h3 {
             font-family: $font-2;
             padding: 60px 0 25px 0;
@@ -127,7 +128,7 @@
                 margin: 0 10px 10px 0;
             }
             & span {
-                padding: 9px;
+                padding: 6px 9px;
                 background: $color-2;
                 color: $color-1;
                 max-height: 40px;
@@ -137,6 +138,9 @@
                 display: flex;
                 flex-direction: row;
                 width: 100%;
+                @media screen and (max-width: 475px) {
+                  font-size: 14px;
+                 }
             }
         }
     }
